# 1.00.04 (71004) Dec 5, 2012
# 1.00.03 (70999) Dec 5, 2012
# 1.00.02 (70997) Dec 5, 2012
# 1.00.01 (70978) Dec 5, 2012
Added accelerometer tab and check box
# 1.00.00 (69441) Oct 23, 2012
Updated screenshot again to remove developer menu and added credits
Updated screenshot
Removed unused rocks images and code
# 0.00.56 (69194) Oct 13, 2012
Tab 3: Only show the gravel specks within the brown surface stroke
# 0.00.55 (69192) Oct 13, 2012
Tab 3: Made 15% more gravel specks at max and 0 at 10% of max friction
# 0.00.54 (69185) Oct 12, 2012
Tab 3: Made the gravel specks 1x1 pixel
# 0.00.53 (69183) Oct 12, 2012
Tab 3: Moved the gravel up a bit so they are slightly above ground
Tab 3: Added white gravel specks in a ratio of about 1:5 to the other specks
# 0.00.52 (69178) Oct 12, 2012
Tab 2-3: Fixed: the puller doesn't fall down when hitting max speed moving to the right
# 0.00.51 (69176) Oct 12, 2012
Tab 2-3: Fixed scaling of force arrow icon in the control panel
Tab 2-3: Fixed: place object > pause > apply force > play > get up to some speed > pause > remove object. The speedometer stays at the last speed, but should go to zero
Tab 2-3: Updated bounds for slider when partly grayed out
# 0.00.50 (69172) Oct 12, 2012
Tab 1: Increased cart weight by a factor of 10
Tab 1: Increased puller forces from by a factor of 5
Tab 1: Increased puller masses from {200,400,600} to {400,600,1000} Newtons
Tab 1-3: Reduced force arrow nodes by a factor of about 5
Tab 3: Added gravel texture as a function of friction
# 0.00.49 (69169) Oct 12, 2012
Tab 2-3: Changed max speed from 9.5 m/s to 10 m/s
Tab 2-3: Changed max applied force to 500N
Tab 2-3: Added factor of gravity with g=10.0 m/s/s
# 0.00.48 (69148) Oct 12, 2012
Tab 2-3: Always show pusher
# 0.00.47 (69125) Oct 11, 2012
Tab 2-3: Fixed: Bug with force slider. Place object > pause sim > move force slider > play sim > remove object. The force slider will stay in place. It should go to zero.
Tab 3: Moved "sum of forces" above "values"